# agendamento-mensagem-whatsapp

./: README.md  main.py  pyproject.toml
agendamento_mensagem_whatsapp/src/core/: config.py
agendamento_mensagem_whatsapp/src/db/: base.py  session.py
agendamento_mensagem_whatsapp/src/db/migrations/alembic/: alembic.ini  env.py
agendamento_mensagem_whatsapp/src/models/: Iitem_pedidto_model.py  pedido_model.py  usuario_model.py
agendamento_mensagem_whatsapp/src/routes/: auth_routes.py
app/: main.py
app/api/v1/: usuario_route.py
app/core/: config.py
app/db/: base.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: c769f0082372_create_usuario_table.py
app/db/tmp/alembic/: alembic.ini
app/models/: usuario_model.py
app/routes/: mensage_routes.py  usuario_route.py
app/schemas/: usuario_schema.py
meu_projeto/src/: app.py  main.py
src/db/: base.py
src/db/tmp/alembic/: env.py
src/routes/: usuario_route.py
src/schemas/: usuario_schema.py
