[project]
name = "AgendamentoMensagensWhatsapp"
version = "0.1.0"
description = "Projeto que fornece o backend do projeto para agendamento de mensagens para Whatapp"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "fastapi>=0.116.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.0",
    "python-jose[criptography,cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.41",
    "sqlalchemy-utils>=0.41.2",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.10",
    "taskipy>=1.14.1",
    "pydantic>=2.11.4",
    "tree>=0.2.4",
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']


[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'


[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'uvicorn main:app --reload'
#run = 'uv run agendamento-mensagem-whatsapp/src/main.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=agendamento-mensagem-whatsapp/src -vv'
post_test = 'coverage html'
